# circle-graphs

./: .gitignore  CMakeLists.txt  IntervalRep.h  interval_rep.h  main.cpp  rebuild.sh  todo.txt
include/data_structures/: chord.h  chord_model.h  distinct_interval_model.h  distinct_interval_rep.h  graph.h  interval.h  shared_interval_model.h  shared_interval_rep.h  simple_interval_rep.h
include/mif/: gavril.h  maximum_induced_forest_on5.h  mif_rscan_n5_qspace.h  nick_simpler_mif.h
include/mis/: implicit_independent_set.h  independent_set.h  interval_store.h  monotone_seq.h  naive.h  pure_output_sensitive.h  switching.h  valiente.h
include/mis/distinct/: combined_output_sensitive.h  implicit_output_sensitive.h  independent_set.h  lazy_output_sensitive.h  naive.h  pure_output_sensitive.h  simple_implicit_output_sensitive.h  switching.h  valiente.h
include/mis/shared/: naive.h  pruned_output_sensitive.h  pure_output_sensitive.h  valiente.h
include/utils/: array_utils.h  chord_model_utils.h  components.h  counters.h  fenwick_max.h  interval_model_utils.h  interval_rep_utils.h  log_stream.h  report.h  spinrad_prime.h
src/: main.cpp
src/data_structures/: chord.cpp  chord_model.cpp  distinct_interval_model.cpp  distinct_interval_rep.cpp  distinct_interval_rep.h  graph.cpp  interval.cpp  shared_interval_model.cpp  shared_interval_rep.cpp  simple_interval_rep.cpp
src/mif/: gavril.cpp  maximum_induced_forest_on5.cpp  mif_rscan_n5_qspace.cpp  nick_simpler_mif.cpp
src/mis/: implicit_independent_set.cpp  independent_set.cpp  interval_store.cpp  monotone_seq.cpp  naive.cpp  pure_output_sensitive.cpp  switching.cpp  unit_monotone_seq.cpp  valiente.cpp
src/mis/distinct/: combined_output_sensitive.cpp  implicit_output_sensitive.cpp  independent_set.cpp  lazy_output_sensitive.cpp  naive.cpp  pure_output_sensitive.cpp  simple_implicit_output_sensitive.cpp  switching.cpp  valiente.cpp
src/mis/shared/: naive.cpp  pruned_output_sensitive.cpp  pure_output_sensitive.cpp  valiente.cpp
src/utils/: chord_model_utils.cpp  components.cpp  fenwick_max.cpp  interval_model_utils.cpp  interval_rep_utils.cpp  log_stream.cpp  spinrad_prime.cpp
tests/: CMakeLists.txt  interval_tests.cpp  spinrad_prime_tests.cpp
tests/data_structures/: chord_model_tests.cpp  distinct_interval_model_endpoint_tests.cpp  interval_tests.cpp
tests/mif/: gavril_base_case_tests.cpp  gavril_tests.cpp  maximum_induced_forest_on5_tests.cpp  mif_rscan_n5_qspace_tests.cpp  nick_simpler_mif_tests.cpp
tests/utils/: create_layers_tests.cpp  spinrad_prime_tests.cpp
